# dfm-inspector

./: README.md  pyproject.toml  requirements.txt  run.py
config/: rules.yaml
dfm_inspector/: __init__.py  app.py  config.py  parser.py  routes.py
dfm_inspector/analyzers/: __init__.py  base.py  cnc.py  die_casting.py  injection_molding.py  other.py  sheet_metal.py  welding.py
templates/: index.html
