[project]
name = "dfm-inspector"
version = "2.0.0"
description = "Manufacturing Design for Manufacturability Analysis Tool"
requires-python = ">=3.10"
dependencies = [
    "flask==3.1.0",
    "trimesh==4.5.3",
    "cascadio==0.0.17",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]
